--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
