--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "db:run": "node -r esbuild-register ./migrate.ts"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.47.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
